--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,24 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'groovy'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "org.codehaus.groovy:groovy-all:2.4.10"
-    testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
-
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
+    testCompile "org.codehaus.groovy:groovy-all:2.4.10"
+    testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
 }
+
+sourceSets {
+    main.kotlin.srcDirs += 'src/main/kotlin'
+    test.groovy.srcDirs += 'src/test/kotlin'
+}
+
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
