--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 jdk: oraclejdk8
-script: ./gradlew clean test
+script: ./gradlew compileKotlin classes compileTestGroovy testClasses test
