--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ apply plugin: 'kotlin'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 
+sourceCompatibility = 1.7
+
 repositories {
     mavenCentral()
 }
