--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'licznerski.jakub'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.72'
 
     repositories {
         mavenCentral()
@@ -16,23 +16,25 @@ apply plugin: 'kotlin'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 
-sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    //compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    testCompile "org.codehaus.groovy:groovy-all:2.4.12"
-    testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
+//    testImplementation "org.codehaus.groovy:groovy-all:2.4.12"
+//    testImplementation "org.spockframework:spock-core:1.1-groovy-2.4"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "org.assertj:assertj-core:3.11.1"
 }
 
 sourceSets {
-    main.kotlin.srcDirs += 'src/main/kotlin'
-    test.groovy.srcDirs += 'src/test/kotlin'
+//    TODO change to proper source dir
+    main.kotlin.srcDirs += 'src/main/kotlin/oneK/v2'
+    test.groovy.srcDirs += 'src/test/kotlin/oneK/v2'
 }
 
 publishing {
@@ -46,8 +48,12 @@ publishing {
     }
 }
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.6"
+    kotlinOptions.jvmTarget = "1.8"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.6"
+    kotlinOptions.jvmTarget = "1.8"
+}
+
+test {
+    useJUnitPlatform()
 }
