--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 group 'licznerski.jakub'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'kotlin'
+apply plugin: 'groovy'
+apply plugin: 'maven-publish'
+
 buildscript {
     ext.kotlin_version = '1.3.72'
 
@@ -12,17 +16,12 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'groovy'
-apply plugin: 'maven-publish'
-
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
 
 //    testImplementation "org.codehaus.groovy:groovy-all:2.4.12"
 //    testImplementation "org.spockframework:spock-core:1.1-groovy-2.4"
@@ -47,6 +46,7 @@ publishing {
         }
     }
 }
+
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
