--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,9 @@
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.3.72"
+}
+
 group 'licznerski.jakub'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'kotlin'
-apply plugin: 'groovy'
-apply plugin: 'maven-publish'
-
-buildscript {
-    ext.kotlin_version = '1.3.72'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
 
 repositories {
     mavenCentral()
@@ -28,26 +17,27 @@ dependencies {
     testImplementation "org.assertj:assertj-core:3.11.1"
 }
 
-sourceSets {
-    main.kotlin.srcDirs += 'src/main/kotlin'
-    test.groovy.srcDirs += 'src/test/kotlin'
-}
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId 'licznerski'
-            artifactId 'oneK'
-            version '0.0.1-SNAPSHOT'
-            from components.java
-        }
-    }
-}
+//sourceSets {
+//    main.kotlin.srcDirs += 'src/main/kotlin'
+//    test.kotlin.srcDirs += 'src/test/kotlin'
+//}
+//
+//publishing {
+//    publications {
+//        maven(MavenPublication) {
+//            groupId 'licznerski'
+//            artifactId 'oneK'
+//            version '0.0.1-SNAPSHOT'
+//            from components.java
+//        }
+//    }
+//}
 
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
         freeCompilerArgs += "-Xopt-in=kotlin.ExperimentalStdlibApi"
+//        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
 }
 
