--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
 jdk: oraclejdk8
 dist: trusty
-before_script:
+before_install:
   - chmod +x gradlew
 script: ./gradlew check
-before_install:
+before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
