--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,14 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.72"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72' apply false
 }
 
-group 'licznerski.jakub'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+allprojects {
+    group 'licznerski.jakub'
+    version '1.0-SNAPSHOT'
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
-
-    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
-    testImplementation "io.mockk:mockk:1.10.0"
-    testImplementation "org.assertj:assertj-core:3.11.1"
-}
-
-//sourceSets {
-//    main.kotlin.srcDirs += 'src/main/kotlin'
-//    test.kotlin.srcDirs += 'src/test/kotlin'
-//}
-//
-//publishing {
-//    publications {
-//        maven(MavenPublication) {
-//            groupId 'licznerski'
-//            artifactId 'oneK'
-//            version '0.0.1-SNAPSHOT'
-//            from components.java
-//        }
-//    }
-//}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-        freeCompilerArgs += "-Xopt-in=kotlin.ExperimentalStdlibApi"
-//        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
+subprojects {
+    repositories {
+        mavenCentral()
     }
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-test {
-    useJUnitPlatform()
 }
