--- a/modules/generator/build.gradle
+++ b/modules/generator/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation project(":modules:game")
 
     testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
     testImplementation "io.mockk:mockk:1.10.0"
