--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0' apply false
 }
 
 allprojects {
@@ -10,5 +10,6 @@ allprojects {
 subprojects {
     repositories {
         mavenCentral()
+        jcenter()
     }
 }
