--- a/modules/game/build.gradle
+++ b/modules/game/build.gradle
@@ -13,13 +13,13 @@ dependencies {
 
 compileKotlin {
     kotlinOptions{
-        jvmTarget = "1.8"
+        jvmTarget = '1.8'
         freeCompilerArgs += "-Xopt-in=kotlin.ExperimentalStdlibApi"
     }
 }
 
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = '1.8'
 }
 
 test {
