--- a/modules/server/micronaut-cli.yml
+++ b/modules/server/micronaut-cli.yml
@@ -1,5 +1,5 @@
 applicationType: grpc
-defaultPackage: com.example
+defaultPackage: oneK
 testFramework: junit
 sourceLanguage: kotlin
 buildTool: gradle
